fix: Fixed the issue where the product page title was not displaying correctly when entering through the FullWidthBanner button on the homepage. fix: Adjusted the z-index of the Hero banner navigation buttons to resolve the issue where the buttons overlap the nav list on mobile screens.

--- a/src/components/Banner/Banner.styles.scss
+++ b/src/components/Banner/Banner.styles.scss
@@ -67,11 +67,11 @@
     }
     &:nth-of-type(1) {
       left: 16px;
-      z-index: 1000;
+      z-index: 1;
     }
     &:nth-of-type(2) {
       right: 16px;
-      z-index: 1000;
+      z-index: 1;
     }
     @include normalBreakPoint(medium) {
       &:nth-of-type(1) {
